--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -11,10 +11,10 @@
   </div>
   <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="errMsg"></div>
   <div class="settings">
-    <div>
+    <div {{if not .Exchange.Registered}} class="d-hide"{{end}}>
       <button id="exportDexBtn" class="bg2 selected">[[[Export Account]]]</button>
     </div>
-    <div>
+    <div {{if not .Exchange.Registered}} class="d-hide"{{end}}>
       <button id="disableAcctBtn" class="bg2 selected">[[[Disable Account]]]</button>
     </div>
     <div>
