allow servers to provide custom logo

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -147,7 +147,7 @@
 </div>
 <div class="d-flex flex-column align-items-stretch mt-1" data-tmpl="knownXCs">
   {{range .KnownExchanges}}
-    <div class="known-exchange" data-host="{{.}}"><img class="micro-icon me-1" src={{dummyExchangeLogo .}}> {{.}}</div>
+    <div class="known-exchange" data-host="{{.}}"><img class="micro-icon me-1" src="/dexlogo/{{.}}"> {{.}}</div>
   {{end}}
 </div>
 <div class="fs14" data-tmpl="skipRegistrationBox">
