--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -3,7 +3,10 @@
 {{$passwordIsCached := .UserInfo.PasswordIsCached}}
 <div id="main" data-handler="dexsettings" data-host="{{.Exchange.Host}}" class="text-center py-5 overflow-y-auto">
   <span class="settings-gear ico-settings"></span>
-  <div class="flex-center fs28 text-break">{{.Exchange.Host}}</div>
+  <div class="flex-center fs28 text-break">
+     <img class="mini-icon mt-1 mx-1 mb-0" src="/dexlogo/{{.Exchange.Host}}"> 
+     {{.Exchange.Host}}
+  </div>
   <div class="flex-center fs16 mb-2">
     <span class="me-2 connection ico-connection d-hide" id="connectedIcon"></span>
     <span class="me-2 errcolor ico-disconnected d-hide" id="disconnectedIcon"></span>
