Add cursor: pointer property on hover

--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -511,6 +511,10 @@ span.token-aware-symbol sup {
 .form-check-input[type=checkbox] {
   background-color: #ebebeb;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   &:checked {
     background-color: #3095db;
   }
@@ -519,5 +523,6 @@ span.token-aware-symbol sup {
 .form-check-label {
   &:hover {
     font-weight: bold;
+    cursor: pointer;
   }
 }
