chappjc review changes
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -104,7 +104,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=LFgBaLTq"></script>
+<script src="/js/entry.js?v=LFSDCFTq"></script>
 </body>
 </html>
 {{end}}
