--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -70,7 +70,7 @@
   </div>
   {{template "walletCfgGuideTemplate"}}
   <hr class="dashed my-2">
-  <div class="d-flex justify-content-between align-items-stretch flex-wrap" data-tmpl="auth">
+  <div class="d-flex justify-content-between align-items-stretch flex-wrap" data-tmpl=walletPassAndSubmitBttn>
     <div class="col-11 p-0" data-tmpl="newWalletPassBox">
       <label for="newWalletPass" class="form-label pt-3 ps-1 mb-1">[[[Wallet Password]]]
         <span class="ico-info" data-tooltip="[[[w_password_tooltip]]]"></span>
