--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -10,7 +10,7 @@
 
 {{define "markets"}}
 {{template "top" .}}
-<div id="main" data-handler="markets" data-net="{{.Net}}" class="main m-0 flex-nowrap v1">
+<div id="main" data-handler="markets" class="main m-0 flex-nowrap v1">
   {{- /* MARKET LIST */ -}}
   <div id="leftMarketDock" class="flex-column align-items-end v1 default">
     <div class="h-100 d-flex flex-column align-items-stretch">
