--- a/client/webserver/site/src/html/order.tmpl
+++ b/client/webserver/site/src/html/order.tmpl
@@ -5,7 +5,7 @@
 {{define "order"}}
 {{template "top" .}}
 {{$ord := .Order}}
-<div id="main" data-handler="order" class="main w-100 overflow-y-auto" data-net="{{.Net}}" data-oid="{{$ord.ID}}">
+<div id="main" data-handler="order" class="main w-100 overflow-y-auto" data-oid="{{$ord.ID}}">
   <div class="px-5">
     <div class="px-1 py-2">
       <span class="fs22 demi me-2">[[[Order]]]</span>
