refactor sync status
Use a more details structure for sync status. Add a sync
notification to replace wallet state notifications where only
the sync status has changed. Lower default account and address
gap limits for Decred and make address gap limit configurable.
Add information about address and tx syncing, for after headers
and filters have synced.

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -132,8 +132,18 @@
                       <td id="peerCount" class="demi"></td>
                     </tr>
                     <tr id="syncProgressBox">
-                      <td class="grey text-nowrap">[[[Sync Progress]]]</td>
+                      <td class="grey text-nowrap">Block Sync</td>
                       <td id="syncProgress" class="demi"></td>
+                    </tr>
+                    <tr id="txSyncBox">
+                      <td class="grey text-nowrap">Tx Sync</td>
+                      <td id="txProgress" class="demi text-end"></td>
+                      <td id="txFindingAddrs" class="demi">
+                        <div class="d-flex align-items-center justify-content-end">
+                          <div class="fs10 ico-spinner spinner me-1"></div>
+                          <span>Finding Addresses</span>
+                        </div>
+                      </td>
                     </tr>
                   </tbody>
                 </table>
