--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -132,16 +132,16 @@
                       <td id="peerCount" class="demi"></td>
                     </tr>
                     <tr id="syncProgressBox">
-                      <td class="grey text-nowrap">Block Sync</td>
+                      <td class="grey text-nowrap">[[[Block Sync]]]</td>
                       <td id="syncProgress" class="demi"></td>
                     </tr>
                     <tr id="txSyncBox">
-                      <td class="grey text-nowrap">Tx Sync</td>
+                      <td class="grey text-nowrap">[[[Balance Discovery]]]</td>
                       <td id="txProgress" class="demi text-end"></td>
                       <td id="txFindingAddrs" class="demi">
                         <div class="d-flex align-items-center justify-content-end">
                           <div class="fs10 ico-spinner spinner me-1"></div>
-                          <span>Finding Addresses</span>
+                          <span>[[[Finding Addresses]]]</span>
                         </div>
                       </td>
                     </tr>
