mm: Cancel existing orders when starting bot
When starting a bot, existing orders on the books will be cancelled. A
message regarding this is displayed on the allocation screen.

--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -434,6 +434,12 @@
                         configuration. If you'd like, we can still start in this starved
                         condition, but the bot will probably not perform as intended.
                       </div>
+
+                      <div data-tmpl="existingOrdersBox" class="d-hide fs17 text-justify mt-3">
+                        <span class="ico-info text-sellcolor fs20"></span>
+                        You have existing orders on this market. These will be cancelled
+                        when you start the bot.
+                      </div>
                     </div>
 
                     <div class="p-3 ps-4 d-flex flex-column justify-content-between align-items-end">
